[gd_scene load_steps=10 format=3 uid="uid://ccqoreueuxdb7"]

[ext_resource type="Script" path="res://hud.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cit6gwe5px1q8" path="res://fonts/Xolonium-Regular.ttf" id="2_2jm3i"]
[ext_resource type="Shader" path="res://cup.gdshader" id="2_g4e3l"]
[ext_resource type="Texture2D" uid="uid://b1sv11v4l3k0n" path="res://art/boba_tea_cup_tall.png" id="3_hw2ho"]
[ext_resource type="Shader" path="res://milktealevel.gdshader" id="4_2r7wb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8n0ou"]
shader = ExtResource("2_g4e3l")
shader_parameter/texture_image = ExtResource("3_hw2ho")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lmwd0"]
shader = ExtResource("4_2r7wb")
shader_parameter/fill_amount = 1.0
shader_parameter/top_width = 1.0
shader_parameter/bottom_width = 0.8

[sub_resource type="InputEventAction" id="InputEventAction_fopy7"]
action = &"start_game"

[sub_resource type="Shortcut" id="4"]
events = [SubResource("InputEventAction_fopy7")]

[node name="HUD" type="CanvasLayer"]
layer = -1
script = ExtResource("1")

[node name="WhiteBackground" type="ColorRect" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_8n0ou")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00225727

[node name="MilkTeaLevel" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_lmwd0")
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.067
anchor_right = 0.978
anchor_bottom = 1.0
offset_right = -13.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.560784, 0.443137, 0.301961, 1)

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2jm3i")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -79.5
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2jm3i")
theme_override_font_sizes/font_size = 60
text = "Bimbleâ€™s
Boba
Bonanza"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -200.0
offset_right = 90.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_2jm3i")
theme_override_font_sizes/font_size = 60
shortcut = SubResource("4")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
